--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -48,7 +48,7 @@
 		<p:commandButton value="#{msgs.previous}" action="#{agreementEditPB.cancel()}" ajax="false" />
 
 		<p:commandButton value="#{msgs.save}" action="#{agreementEditPB.save()}" ajax="false"
-			rendered="#{userManager.loggedUser.hasRolePermission('PROFESSOR')}" />
+			rendered="#{userManager.loggedUser.hasRolePermission('PROFESSOR') and agreementEditPB.professorModeOn }" />
 
 
 	</h:form>
